--- a/BackEndCrawler/package.json
+++ b/BackEndCrawler/package.json
@@ -10,6 +10,7 @@
   "author": "andreyleykin@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.6.0",
     "axios": "^0.20.0",
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
